--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,5 @@ services:
   opencv:
     build:
       context: .
-    ports:
-      - "5000:5000"
+    image: opencv-java
+    command: java -Xmx64m -cp target/dependency/*:target/opencv-java-1.0-SNAPSHOT.jar -Djava.library.path=/opencv/opencv-3.3.1/build/lib/ Main
