--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <artifactId>opencv-java</artifactId>
   <properties>
-    <opencv.path>/opencv/opencv-3.3.1/build/bin/opencv-331.jar</opencv.path>
+    <opencv.path>${env.OPENCV_HOME}/build/bin/opencv-331.jar</opencv.path>
   </properties>
   <dependencies>
     <dependency>
@@ -16,6 +16,11 @@
       <version>3.3.1</version>
       <scope>system</scope>
       <systemPath>${opencv.path}</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>com.heroku.agent</groupId>
+      <artifactId>heroku-javaagent</artifactId>
+      <version>2.0</version>
     </dependency>
   </dependencies>
   <build>
